# basic-llvm-cmd

./: .gitignore  .travis.yml  CMakeLists.txt  ReadMe.md  build_run.sh  docker-run.sh  x86.Dockerfile
.github/workflows/: docker-build.yml  raw-build.yml
include/: common.hpp
src/: common.cpp  main.cpp
tests/: CMakeLists.txt  common_tests.cpp  main.cpp
